--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^4.1.0",
     "next": "latest",
+    "node": "^18.17.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "stripe": "^16.6.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
